@@ -489,6 +489,7 @@ SOURCES =
 	file_storage
 	lazy_bdecode
 	escape_string
+	string_util
 	file
 	gzip
 	http_connection
