@@ -1,0 +1,58 @@
+/*
+
+Copyright (c) 2012, Arvid Norberg
+All rights reserved.
+
+Redistribution and use in source and binary forms, with or without
+modification, are permitted provided that the following conditions
+are met:
+
+    * Redistributions of source code must retain the above copyright
+      notice, this list of conditions and the following disclaimer.
+    * Redistributions in binary form must reproduce the above copyright
+      notice, this list of conditions and the following disclaimer in
+      the documentation and/or other materials provided with the distribution.
+    * Neither the name of the author nor the names of its
+      contributors may be used to endorse or promote products derived
+      from this software without specific prior written permission.
+
+THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
+AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
+ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
+LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+POSSIBILITY OF SUCH DAMAGE.
+
+*/
+
+#ifndef TORRENT_STRING_UTIL_HPP_INCLUDED
+#define TORRENT_STRING_UTIL_HPP_INCLUDED
+
+namespace libtorrent
+{
+	TORRENT_EXTRA_EXPORT bool is_alpha(char c);
+	TORRENT_EXPORT bool is_digit(char c);
+	TORRENT_EXTRA_EXPORT bool is_print(char c);
+	TORRENT_EXTRA_EXPORT bool is_space(char c);
+	TORRENT_EXTRA_EXPORT char to_lower(char c);
+
+	TORRENT_EXTRA_EXPORT int split_string(char const** tags, int buf_size, char* in);
+	TORRENT_EXTRA_EXPORT bool string_begins_no_case(char const* s1, char const* s2);
+	TORRENT_EXTRA_EXPORT bool string_equal_no_case(char const* s1, char const* s2);
+
+	TORRENT_EXTRA_EXPORT void url_random(char* begin, char* end);
+
+	// strdup is not part of the C standard. Some systems
+	// don't have it and it won't be available when building
+	// in strict ansi mode
+	char* allocate_string_copy(char const* str);
+
+}
+
+#endif
+
